noget mere components

--- a/src/components/CorevaluesCard.astro
+++ b/src/components/CorevaluesCard.astro
@@ -2,8 +2,8 @@
 // import type { ImageMetadata } from "astro";
 import { Icon } from "astro-icon/components";
 
-const { corevalues } = Astro.props;
-const { icon, title, description, link, text } = corevalues;
+const { corevalue } = Astro.props;
+const { icon, title, description, link, text } = corevalue;
 
 // const images = import.meta.glob<{ default: ImageMetadata }>("/src/icons/*.{jpeg,jpg,png,gif}");
 // if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/icons/*.{jpeg,jpg,png,gif}"`);
