--- a/src/components/EmployeeCard.astro
+++ b/src/components/EmployeeCard.astro
@@ -39,5 +39,9 @@ if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/assets/
       gap: 29px;
       justify-content: center;
     }
+    svg {
+      width: 24px;
+      height: 24px;
+    }
   }
 </style>
