--- a/src/components/Overskrift.astro
+++ b/src/components/Overskrift.astro
@@ -1,9 +1,9 @@
 ---
 import Button from "./Button.astro";
-const { style, h2, tekst, buttonProps } = Astro.props;
+const { farve, h2, tekst, buttonProps } = Astro.props;
 ---
 
-<article class={style}>
+<article class={farve}>
   <div>
     <h2>{h2}</h2>
     <p>{tekst}</p>
