--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,23 +1,20 @@
 ---
-import "../styles/style.css";
 import MainLayout from "../layouts/MainLayout.astro";
+import AndenSection from "../components/AndenSection.astro";
 import Accordion from "../components/Accordion.astro";
-import TeamCard from "../components/TeamCard.astro";
 import Tag from "../components/Tag.astro";
+
+import { Image } from "astro:assets";
+import case2 from "../assets/case2.jpg";
 ---
 
 <MainLayout title="About">
-  <section>
-    <Tag style="primary">About Us</Tag>
-  </section>
+  <AndenSection order="order" imageProps={{ imageProps: "case2" }} tagProps={{ style: "primary" }} h2="Turn your ideas into reality." tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." li1="Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day." li2="Capitalize on low hanging fruit to identify a ballpark value added activity to beta test override the digital.">About Us</AndenSection>
+
   <section class="team">
     <p class="faq">Our team</p>
     <h2>We champion the bold to achieve the extraordinary</h2>
     <p>Ippsum is the result of synergy between our teams and our customers. Our company culture is focused on excellent productivity, customer satisfaction, respect for team.</p>
-
-    <article class="team-grid">
-      <TeamCard />
-    </article>
   </section>
   <section class="accordion">
     <div class="overskrift-tag">
