--- a/src/pages/casestudy.astro
+++ b/src/pages/casestudy.astro
@@ -1,32 +1,9 @@
 ---
-import "../styles/style.css";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title="Case Study">
-  
-  <main>
+<MainLayout title="Case Study" />
 
-  
-   
-  </main>
-</MainLayout>
+<style></style>
 
-<style>
-  
-  
-  @media screen and (min-width: 768px) {
-    
-  }
-
-  @media screen and (min-width: 1024px) {
-   
-  }
-
-  @media screen and (min-width: 1440px) {
-  }
-</style>
-
-<script>
-  
-</script>
+<script></script>
