--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -2,21 +2,28 @@
 const { cardContent } = Astro.props;
 ---
 
-<ul class="full-width">
-  {
-    cardContent.map((card) => (
-      <li>
-        <img src={card.image} alt="" />
-        <h6>{card.title}</h6>
-        <p>{card.body}</p>
-      </li>
-    ))
-  }
-</ul>
+<section class="full">
+  <header>
+    <h2>Financial Projections</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </header>
+
+  <ul class="full" role="list">
+    {
+      cardContent.map((card) => (
+        <li>
+          <img src={card.image} alt="" />
+          <h6>{card.title}</h6>
+          <p>{card.body}</p>
+        </li>
+      ))
+    }
+  </ul>
+</section>
 
 <style>
   @layer components {
-    ul {
+    /* ul {
       list-style: none;
       display: flex;
       overflow-x: auto;
@@ -36,13 +43,92 @@ const { cardContent } = Astro.props;
         color: var(--color-primary3);
 
         &:hover {
-          background: var(--color-primary3); /* Sort baggrund */
-          color: var(--color-secondary2); /* Hvid skrift */
+          background: var(--color-primary3); 
+          color: var(--color-secondary2); 
         }
 
         img {
           width: 10%;
         }
+      }
+    } */
+
+    main {
+      padding-block: 4rem;
+      display: grid;
+      grid-template-columns:
+        [full-start]
+        1fr
+        [content]
+        minmax(0, var(--content-width))
+        1fr
+        [full-end];
+      column-gap: 1rem;
+
+      > * {
+        grid-column: content;
+      }
+
+      .full {
+        grid-column: full;
+        display: grid;
+        grid-template-columns: inherit;
+        row-gap: 3rem;
+
+        > * {
+          grid-column: content;
+        }
+
+        > ul {
+          scroll-snap-type: x mandatory;
+          grid-column: full;
+          padding-inline: max(1rem, 50% - var(--content-width) / 2);
+          padding-block-end: 1rem;
+
+          li {
+            scroll-snap-align: center;
+          }
+        }
+      }
+    }
+
+    ul {
+      display: flex;
+      gap: 1rem;
+      overflow-x: auto;
+
+      li {
+        flex-basis: min(400px, 90%);
+        flex-shrink: 0;
+        background: #ebebeb;
+        color: #595566;
+        border-radius: 8px;
+        font-size: 1rem;
+        padding: 2.75rem 2.1875rem;
+        align-self: start;
+
+        h6 {
+          font-weight: 700;
+          font-size: 1.5625rem;
+        }
+      }
+      img {
+        width: 10%;
+      }
+    }
+
+    h6 {
+      all: revert;
+      color: #181818;
+      margin-block: 0 0.625rem;
+      line-height: 1.125;
+    }
+
+    header {
+      color: #595566;
+
+      p {
+        max-inline-size: 67ch;
       }
     }
   }
