--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -2,58 +2,30 @@
 const { cardContent } = Astro.props;
 ---
 
-<section class="full">
-  <header>
-    <h2>Financial Projections</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </header>
+<section>
+  <article class="full">
+    <div class="teksten">
+      <h2>Financial Projections</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
 
-  <ul class="full" role="list">
-    {
-      cardContent.map((card) => (
-        <li>
-          <img src={card.image} alt="" />
-          <h6>{card.title}</h6>
-          <p>{card.body}</p>
-        </li>
-      ))
-    }
-  </ul>
+    <ul role="list">
+      {
+        cardContent.map((card) => (
+          <li>
+            <img src={card.image} alt="" />
+            <h6>{card.title}</h6>
+            <p>{card.body}</p>
+          </li>
+        ))
+      }
+    </ul>
+  </article>
 </section>
 
 <style>
   @layer components {
-    /* ul {
-      list-style: none;
-      display: flex;
-      overflow-x: auto;
-      gap: var(--card-gap);
-      padding: 0;
-
-      scroll-snap-type: x mandatory;
-      grid-column: full;
-      padding-inline: max(1rem, 50% - var(--content-width) / 2);
-      padding-block-end: 1rem;
-
-      > li {
-        flex: 1 0 50%;
-        background: var(--color-card);
-        padding: var(--card-padding);
-        border-radius: var(--card-border-radius);
-        color: var(--color-primary3);
-
-        &:hover {
-          background: var(--color-primary3); 
-          color: var(--color-secondary2); 
-        }
-
-        img {
-          width: 10%;
-        }
-      }
-    } */
-
-    main {
+    section {
       padding-block: 4rem;
       display: grid;
       grid-template-columns:
@@ -74,9 +46,11 @@ const { cardContent } = Astro.props;
         display: grid;
         grid-template-columns: inherit;
         row-gap: 3rem;
+        background: var(--color-secondary1);
 
         > * {
           grid-column: content;
+          color: var(--color-text);
         }
 
         > ul {
@@ -100,16 +74,18 @@ const { cardContent } = Astro.props;
       li {
         flex-basis: min(400px, 90%);
         flex-shrink: 0;
-        background: #ebebeb;
-        color: #595566;
+        background: var(--color-card);
+        color: var(--color-text);
         border-radius: 8px;
-        font-size: 1rem;
         padding: 2.75rem 2.1875rem;
         align-self: start;
-
-        h6 {
+        &:hover {
+          background: var(--color-primary3);
+          color: var(--color-secondary2);
+        }
+        h2 {
           font-weight: 700;
-          font-size: 1.5625rem;
+          color: var(--color-primary3);
         }
       }
       img {
@@ -118,17 +94,15 @@ const { cardContent } = Astro.props;
     }
 
     h6 {
-      all: revert;
-      color: #181818;
+      /* all: revert; */
       margin-block: 0 0.625rem;
       line-height: 1.125;
     }
 
-    header {
-      color: #595566;
-
+    .teksten {
       p {
         max-inline-size: 67ch;
+        /* color: var(--color-text); */
       }
     }
   }
