--- a/src/components/Animation.astro
+++ b/src/components/Animation.astro
@@ -51,7 +51,8 @@ const { style, linket } = Astro.props;
 
     .parent {
       aspect-ratio: 1;
-      /* width: 150px; */
+      width: 150px;
+      height: 150px;
       border-radius: 1e5px;
       margin-inline: auto;
     }
