--- a/src/components/CorevaluesCard.astro
+++ b/src/components/CorevaluesCard.astro
@@ -9,18 +9,22 @@ const { icon, title, description, link, text } = corevalue;
 // if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/icons/*.{jpeg,jpg,png,gif}"`);
 ---
 
-<article>
-  <img src={icon} alt="" />
-  <h5>{title}</h5>
-  <p>{description}</p>
-  <a href={link}>{text}</a>
-</article>
-
+<ul role="list">
+  <li>
+    <img src={icon} alt="" />
+    <h5>{title}</h5>
+    <p>{description}</p>
+    <a href={link}>{text}</a>
+  </li>
+</ul>
 <style>
   @layer components {
     article {
+      background: var(--color-secondary1);
       color: var(--color-primary3);
       text-align: center;
+      padding: 36px 23px;
+      border-radius: 20px;
       p {
         color: var(--color-text);
       }
