--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,9 +52,9 @@
     max-width: 1600px;
     margin: auto;
   }
-  /* section {
-    padding-inline: 22.5rem;
-  } */
+  section {
+    padding: 5rem;
+  }
 
   h1,
   h2,
