--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -13,6 +13,7 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
   </section>
   <section>
     <EmployeeSection data={employeeData} />
+    <h4>hej</h4>
   </section>
 </MainLayout>
 
