--- a/src/components/Popover.astro
+++ b/src/components/Popover.astro
@@ -39,7 +39,7 @@ import Button from "./Button.astro";
   }
 
   .submit {
-    background-color: #ffcc4a;
+    background-color: var(--color-primary1);
     display: inline-block;
     padding: 16px 37px;
     transition: all 0.55s ease;
@@ -56,7 +56,7 @@ import Button from "./Button.astro";
     gap: 10px;
     border-radius: 54px;
     border: 1px solid #e3e3e3;
-    background: #fff;
+    background: var(--color-secondary2);
   }
 
   input {
@@ -81,7 +81,7 @@ import Button from "./Button.astro";
     }
 
     h4 {
-      color: #fff;
+      color: var(--color-secondary2);
       text-align: center;
       font-family: Cabin;
       font-size: 45px;
