--- a/src/pages/casestudy.astro
+++ b/src/pages/casestudy.astro
@@ -1,8 +1,11 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import Hero from "../components/Hero.astro";
 ---
 
-<MainLayout title="Case Study" />
+<MainLayout title="Case Study">
+  <Hero baggrund="baggrund3" h1="Taxes & Efficiency">Case Studies single</Hero>
+</MainLayout>
 
 <style></style>
 
