--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,6 +90,7 @@ const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/fr
   .hero {
     background-color: var(--color-primary3);
     color: var(--color-secondary2);
+    /* grid-column: content; */
     display: flex;
 
     align-items: center;
@@ -116,6 +117,7 @@ const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/fr
     display: flex;
     justify-content: center;
     gap: 20px;
+    grid-column: content;
   }
 
   .title {
