--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -1,6 +1,7 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import Overskrift from "../components/Overskrift.astro";
+import Hero from "../components/Hero.astro";
 
 import EmployeeSection from "../components/EmployeeSection.astro";
 
@@ -8,6 +9,7 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
 ---
 
 <MainLayout title="Team">
+  <Hero baggrund="baggrund2" h1="The Consultors">Team</Hero>
   <section>
     <Overskrift farve="primary" style="secondary" linket="#" buttonProps={{ style: "secondary" }} h2="Meet Our Great Team" tekst="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation.">Book a meeting</Overskrift>
   </section>
