sidste på skolen

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,6 +30,10 @@ const { baggrund, h1 } = Astro.props;
     .box {
       background: rgba(255, 255, 255, 0.85);
       border-radius: 29px;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       /* display: inline-flex;
     padding: 48px 60px 58px 60px;
     flex-direction: column;
